# SUBUL-Platform

./: .env.example  .gitattributes  .gitignore  AKS_FIXES.md  COMMERCIAL_PROMO_CODE_GUIDE.md  EMAIL_DELIVERABILITY_GUIDE.md  EMPLOI_ENHANCEMENTS.md  ENHANCEMENTS.md  GITHUB_SECRETS.md  GRAFANA_MONITORING_PLAN.md  GROWTH_RECOMMENDATIONS_ROADMAP.md  HR_COACH_INTEGRATION.md  HR_COACH_INTEGRATION_SUMMARY.md  LAB_ENHANCEMENT_RECOMMENDATIONS.md  LEARNER_EXPANSION_PLAN.md  LICENSE  MONITORING_PLAN.md  PRODUCT_ROADMAP.md  QUICKSTART_HR_COACH.md  README.md  ROADMAP.md  START_HERE_HR_COACH.md  Untitled  agentjob.md  brochure.html  dev.ps1  docker-compose.hr-coach.yml  docker-compose.technical-coach.yml  docker-compose.yml  flouci.md  job_agents_architecture.md  nextstep.md  package-lock.json  package.json  verify-hr-coach-integration.bat  verify-hr-coach-integration.ps1
.qwen/: settings.json  settings.json.orig
backend/: .dockerignore  .gitignore  courses.json  dockerfile.dev  entrypoint.dev.sh  entrypoint.sh  package-lock.json  package.json  test.js
backend/agents/03_Agents/: .gitignore  Cloud_master.py  README.md  agent_rag.py  api_server.py  architecte_agent.py  builder_agent.py  cloud_tutor_agent.py  empathy_agent.py  main_orchestrator.py  memory_management.py  orchestrator.py  pyproject.toml  requirements.txt  search_index_manager.py  stt_deepgram.py  supervisor_agent.py  tts_deepgram.py
docs/: AUDIT-2026-03-22.md  certification-sync-rollout.md
eks/: TIMEOUT-FIX.md  backend-deployment-patch.yaml  cert-manager.yaml  db-backup-cronjob.yaml  deployment.yml  ingresses.yaml
(+1247 files in other folders)
