[project]
name = "agent-tuteur-subul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework>=1.0.0b260212",
    "aiohttp>=3.13.3",
    "azure-core>=1.38.1",
    "azure-search-documents>=11.7.0b2",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "python-dotenv==1.2.1",
    "tiktoken>=0.12.0",
]
